--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Suma de dos números</title>
 </head>
 <body>
-	<h1>Suma de dos números</h1>
+	<h1>Suma denúmeros</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus soluta architecto sapiente nemo nulla, perspiciatis perferendis quod debitis voluptatibus consectetur quam fuga ut iste quaerat officiis fugiat magnam autem. Ut.</p>
 
 </body>
